fix(timer): remove css visibility handling for the add minutes quantiy

--- a/src/styles/components/Timer.scss
+++ b/src/styles/components/Timer.scss
@@ -1,4 +1,4 @@
-@use '../vars' as *;
+@use "../vars" as *;
 
 .timer {
   @include flex(center, center, column, 3rem);
@@ -53,7 +53,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 4rem;
+    min-width: 4rem;
     height: 4rem;
     padding: 0;
     border-radius: 50%;
@@ -63,10 +63,6 @@
     .btn__icon {
       font-size: 1.8rem;
     }
-  }
-
-  &__addTimeLabel {
-    display: none;
   }
 }
 
